--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
             "command": "clean install",
             "debug": false
         }
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
