--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,16 @@
             "projectName": "products",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-UsersApplication<users>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.github.rafaelfernandes.users.UsersApplication",
+            "projectName": "users",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
